# single_seg

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml
checkpoints/: README.md
configs/: default.yaml  fast_plate_demo.yaml  realsense_d435_live.yaml
single_seg/: __init__.py  prompt_task_info_utils.py  realsense_rgbd_segmenter.py  single_object_segmenter.py  tracker_only_backend.py  view_ply_sequence.py
tests/: test_prompt_task_info_utils.py  test_single_object_segmenter.py
utils/: annotate_prompt_bboxes.py  annotate_prompt_bboxes_with_sam3.py  capture_realsense_images.py  profile_realsense_debug_dump.py
